# visor

./: .gitignore  .gitmodules  CMakeLists.txt  todos
assets/shaders/src/: fragment.frag  vertex.vert
include/: visor.h
scripts/: compile_shaders.bat  compile_shaders.sh
src/: AABB.cpp  AABB.h  camera.cpp  camera.h  entity.cpp  entity.h  input_system.cpp  input_system.h  main.cpp  maths.h  mesh.cpp  mesh.h  ray.cpp  ray.h  render_system.cpp  render_system.h  render_system_backend_vk.cpp  render_system_backend_vk.h  renderer.cpp  renderer.h  renderer_backend_vk.cpp  renderer_backend_vk.h  types.h  window.cpp  window.h  window_system.cpp  window_system.h
